<resources>
    <string name="app_name">StatFortus</string>
    <string name="parametrage_de_la_force_avant">Paramétrage de la force avant</string>
    <string name="force_affectee">➜ Force affectée :</string>
    <string name="default_value_forceAV">50 kg</string>
    <string name="concat_value_forceAV">%1$d kg</string>
    <string name="parametrage_de_la_force_arri_re">Paramétrage de la force arrière</string>
    <string name="default_value_forceAR">50 kg</string>
    <string name="concat_value_forceAR">%1$d kg</string>
    <string name="temps_total">Temps total :</string>
    <string name="default_value_tempsTotal">--</string>
    <string name="temps_effort">Temps effort :</string>
    <string name="default_value_tempsEffort">--</string>
    <string name="reinitialiser_temps_total">Réinitialiser temps</string>
    <string name="quitter_application">Quitter l\'application</string>
    <string name="configurations_minimales">Configurations minimales</string>
    <string name="valider">VALIDER</string>
    <string name="fermer">FERMER</string>
    <string name="champ_incorrect_ou_vide">Champ incorrect ou vide !</string>
    <string name="erreur_renseigner_ip">Il est obligatoire de renseigner une adresse IP pour la machine (cohérente et non vide) !</string>
    <string name="erreur_ip">Vérification : Cet adresse IP ne réponds pas !</string>
    <string name="ip_incorrecte">Adresse IP incorrecte !</string>
    <string name="champ_vide">Champ vide !</string>
    <string name="sharedPref_addrIpMachine">addrIpMachine</string>
    <string name="sharedPref_portMachine">portMachine</string>
    <string name="sharedPref_ForceAv">motForceAv</string>
    <string name="sharedPref_ForceAr">motForceAr</string>
    <string name="sharedPref_secCumul">motSecCumul</string>
    <string name="sharedPref_minCumul">motMinCumul</string>
    <string name="sharedPref_motSecTmpTotal">motSecTmpTotal</string>
    <string name="sharedPref_motMinTmpTotal">motMinTmpTotal</string>
    <string name="com_impossible">Communication impossible -> Vérifier votre connexion internet (Wi-Fi de la machine) !</string>
    <string name="erreur_autre">Problème de liaison à la machine, vérifiez que vous êtes connecté à internet !</string>
    <string name="modifier_parametres_de_liaison"><u>Modifier paramètres de liaison</u></string>
    <string name="erreur">Erreur :</string>
    <string name="pas_d_erreur">Pas d\'erreur</string>
    <string name="probleme_envoi_donnees">Problème envoi des données !</string>
    <string name="annuler">Annuler</string>
    <string name="reception_donnees">Réception des données !</string>
    <string name="adresse_ip_de_la_machine">Adresse IP de la machine :</string>
    <string name="options_avancees">Options avancées</string>
    <string name="modifier_ces_parametres_peut_averer_risque">Modifier ces paramètres peut s\'avérer risqué.</string>
    <string name="port_machine">Port machine :</string>
    <string name="defaultPort">502</string>
    <string name="adresse_du_mot_force_avant">Adresse du mot force avant :</string>
    <string name="defaut_mot_force_av">0</string>
    <string name="adresse_du_mot_force_arriere">Adresse du mot force arrière :</string>
    <string name="defaut_mot_force_ar">1</string>
    <string name="adresse_du_mot_secondes_cumulees">Adresse du mot seconde(s) cumulée(s) :</string>
    <string name="defaut_mot_sec_cumul">2</string>
    <string name="adresse_du_mot_minutes_cumulees">Adresse du mot minute(s) cumulée(s) :</string>
    <string name="defaut_mot_min_cumul">3</string>
    <string name="adresse_du_mot_des_secondes_temps_total">Adresse du mot des secondes temps total :</string>
    <string name="defaut_mot_sec_tmp_total">4</string>
    <string name="adresse_du_mot_des_minutes_temps_total">Adresse du mot des minutes temps total :</string>
    <string name="defaut_mot_min_tmp_total">5</string>
</resources>
