<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_addrIpMachine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="4dp"
        android:drawableStart="@drawable/ic_build_black_24dp"
        android:drawableTint="#80000000"
        android:gravity="center"
        android:text="@string/adresse_ip_de_la_machine"
        android:textColor="#80000000"
        android:textSize="@dimen/customTitle"
        tools:targetApi="m"/>

    <EditText
        android:id="@+id/ed_addrIpMachine"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="192.168.0.2"
        android:inputType="phone"
        android:textColor="#000000"
        android:textSize="@dimen/customEntry"
        tools:ignore="LabelFor"/>

    <CheckBox
        android:id="@+id/cb_optAvancees"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:text="@string/options_avancees"
        android:textColor="#000000"
        android:textSize="@dimen/customEntry"/>

    <TextView
        android:id="@+id/tv_warningOptAvancees"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:drawablePadding="4dp"
        android:drawableStart="@drawable/ic_warning_black_24dp"
        android:drawableTint="@color/colorAccent"
        android:gravity="center"
        android:text="@string/modifier_ces_parametres_peut_averer_risque"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/customTitle"
        android:textStyle="italic"
        android:visibility="gone"
        tools:targetApi="m"/>

    <TextView
        android:id="@+id/tv_portMachine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/port_machine"
        android:textColor="#80000000"
        android:textSize="@dimen/customTitle"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/ed_portMachine"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:text="@string/defaultPort"
        android:textColor="#000000"
        android:textSize="@dimen/customEntry"
        android:visibility="gone"
        tools:ignore="LabelFor"/>

    <TextView
        android:id="@+id/tv_motForceAV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/adresse_du_mot_force_avant"
        android:textColor="#80000000"
        android:textSize="@dimen/customTitle"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/ed_motForceAV"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:text="@string/defaut_mot_force_av"
        android:textColor="#000000"
        android:textSize="@dimen/customEntry"
        android:visibility="gone"
        tools:ignore="LabelFor"/>

    <TextView
        android:id="@+id/tv_motForceAR"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/adresse_du_mot_force_arriere"
        android:textColor="#80000000"
        android:textSize="@dimen/customTitle"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/ed_motForceAR"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:text="@string/defaut_mot_force_ar"
        android:textColor="#000000"
        android:textSize="@dimen/customEntry"
        android:visibility="gone"
        tools:ignore="LabelFor"/>

    <TextView
        android:id="@+id/tv_motSecCumul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/adresse_du_mot_secondes_cumulees"
        android:textColor="#80000000"
        android:textSize="@dimen/customTitle"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/ed_motSecCumul"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:text="@string/defaut_mot_sec_cumul"
        android:textColor="#000000"
        android:textSize="@dimen/customEntry"
        android:visibility="gone"
        tools:ignore="LabelFor"/>

    <TextView
        android:id="@+id/tv_motMinCumul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/adresse_du_mot_minutes_cumulees"
        android:textColor="#80000000"
        android:textSize="@dimen/customTitle"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/ed_motMinCumul"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:text="@string/defaut_mot_min_cumul"
        android:textColor="#000000"
        android:textSize="@dimen/customEntry"
        android:visibility="gone"
        tools:ignore="LabelFor"/>

    <TextView
        android:id="@+id/tv_motSecTmpTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/adresse_du_mot_des_secondes_temps_total"
        android:textColor="#80000000"
        android:textSize="@dimen/customTitle"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/ed_motSecTmpTotal"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:text="@string/defaut_mot_sec_tmp_total"
        android:textColor="#000000"
        android:textSize="@dimen/customEntry"
        android:visibility="gone"
        tools:ignore="LabelFor"/>

    <TextView
        android:id="@+id/tv_motMinTmpTotal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/adresse_du_mot_des_minutes_temps_total"
        android:textColor="#80000000"
        android:textSize="@dimen/customTitle"
        android:visibility="gone"/>

    <EditText
        android:id="@+id/ed_motMinTmpTotal"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:inputType="numberDecimal"
        android:text="@string/defaut_mot_min_tmp_total"
        android:textColor="#000000"
        android:textSize="@dimen/customEntry"
        android:visibility="gone"
        tools:ignore="LabelFor"/>

</LinearLayout>